apps/dotcom/client/src/tla/components/TlaSidebar/sidebar.module.css
.sidebar {
	position: absolute;
	display: flex;
	top: 0px;
	left: calc(var(--tla-sidebar-width) * -1);
	height: 100%;
	width: var(--tla-sidebar-width);
	z-index: 100;
	transform: translate(0px, 0px);
	flex-direction: column;
	flex: 0 0 auto;
	padding: 0 0 4px 0;
	background: var(--tla-color-sidebar);
	border-right: 1px solid var(--tl-color-low, rgba(237, 240, 242, 1));
	transition: transform 0.16s ease-in-out;
}

:global(.tl-container[dir='rtl']) .sidebar {
	left: auto;
	right: calc(var(--tla-sidebar-width) * -1);
	border-right: none;
	border-left: 1px solid transparent;
}

.sidebarDragOverlay {
	position: absolute;
	inset: 0px;
	display: flex;
	align-items: center;
	justify-content: center;
	font-size: 12px;
	font-weight: 600;
	z-index: 1000;
	background-color: var(--tla-color-sidebar);
	content: 'Upload .tldr files';
	opacity: 0;
	animation: 0.2s fade-in 0.25s forwards;
}

@keyframes fade-in {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.sidebarOverlayMobile {
	all: unset;
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	z-index: 99;
	background-color: var(--tla-color-overlay);
	display: none;
}

@media (min-width: 768px) {
	.sidebar {
		border-right: 1px solid var(--tl-color-low);
	}
	.sidebar[data-visible='true'] {
		transform: translate(100%, 0px);
		transition: transform 0.22s ease-out;
	}

	:global(.tl-container[dir='rtl']) .sidebar {
		border-right: none;
		border-left: 1px solid var(--tl-color-low);
	}

	:global(.tl-container[dir='rtl']) .sidebar[data-visible='true'] {
		transform: translate(-100%, 0px);
	}
}

@media (max-width: 767px) {
	.sidebar {
		--w: min(320px, max(220px, calc(100vw - 100px)));
		left: calc(var(--w) * -1);
		width: var(--w);
		transition: none;
	}

	.sidebar[data-visiblemobile='true'] {
		transform: translate(100%, 0px);
	}

	:global(.tl-container[dir='rtl']) .sidebar {
		left: auto;
		right: calc(var(--w) * -1);
	}

	:global(.tl-container[dir='rtl']) .sidebar[data-visiblemobile='true'] {
		transform: translate(-100%, 0px);
	}

	.sidebarOverlayMobile[data-visiblemobile='true'] {
		display: block;
	}
}

.sidebarContent {
	display: flex;
	flex-direction: column;
	flex: 1 1 auto;
	padding: 0 12px 40px 12px;
	overflow-y: scroll;
	overflow-x: visible;
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}

.sidebarContent::-webkit-scrollbar {
	display: none;
}

/* -------------------- Hoverable ------------------- */

.hoverable::after {
	display: block;
	content: '';
	position: absolute;
	top: 2px;
	left: 0px;
	right: 0px;
	bottom: 2px;
	border-radius: 4px;
	background-color: var(--tla-color-hover-1);
	z-index: 0;
	pointer-events: none;
	visibility: hidden;
}

.hoverable:has(*[data-state='open'])::after,
.hoverable[data-active='true']::after {
	background-color: var(--tla-color-hover-2);
	visibility: visible;
}

.hoverable:has(*[data-state='open']) .collaborator {
	display: none;
}

@media (hover: hover) {
	.hoverable:hover::after {
		visibility: visible;
	}

	.hoverable {
		color: var(--tla-color-text-2);
	}
	.hoverable[data-active='true'],
	.hoverable:hover {
		color: var(--tla-color-text-1);
	}
}

/* ----------------- Sidebar toggle ----------------- */

.sidebarToggle {
	position: relative;
	background: none;
	border: none;
	cursor: pointer;
	width: 40px;
	height: 40px;
	color: var(--tla-color-text-1);
	display: flex;
	align-items: center;
	justify-content: center;
	pointer-events: all;
	flex-shrink: 0;
	padding: 0px;
}

.sidebarToggle::after {
	display: block;
	content: '';
	position: absolute;
	top: 4px;
	left: 4px;
	right: 4px;
	bottom: 4px;
	border-radius: 4px;
	pointer-events: none;
	z-index: 0;
	visibility: hidden;
	background-color: var(--tla-color-hover-1);
}

.sidebarToggle:focus-visible {
	border-radius: 8px;
	outline-offset: -4px;
	outline: 2px solid var(--tl-color-focus);
}

@media (hover: hover) {
	.sidebarToggle:hover {
		z-index: 100;
	}

	.sidebarToggle:hover::after {
		visibility: visible;
	}
}

.sidebarToggle[data-mobile='true'] {
	display: flex;
}

.sidebarToggle[data-mobile='false'] {
	display: none;
}

@media (min-width: 768px) {
	.sidebarToggle[data-mobile='true'] {
		display: none;
	}

	.sidebarToggle[data-mobile='false'] {
		display: flex;
	}
}

/* --------------------- Top area -------------------- */

.sidebarTopRow {
	display: flex;
	flex-direction: row;
	align-items: center;
	flex: 0 0 auto;
	height: 43px;
	padding: 3px 8px 0px 4px;
	gap: 8px;
}

/* Workspace link */

.sidebarWorkspaceButton {
	background: none;
	border: none;
	position: relative;
	height: 40px;
	flex-grow: 2;
	display: flex;
	align-items: center;
	padding-right: 6px;
	padding-left: 8px;
	background-color: var(--tla-color-sidebar);
	overflow: hidden;
	padding-bottom: 1px;
}

.sidebarWorkspaceButtonLabel {
	/* for alignment with other buttons */
	display: block;
	flex-grow: 2;
	flex: 1 1 auto;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	padding: 0 0px;
	position: relative;
	z-index: 1;
}

/* Create file button */

.sidebarCreateFileButton {
	background: none;
	border: none;
	cursor: pointer;
	position: relative;
	top: 0.5px;
	right: -8px;
	height: 40px;
	width: 40px;
	display: flex;
	align-items: center;
	justify-content: center;
	color: inherit;
	flex-shrink: 0;
	padding: 0px;
	z-index: 10;
}

:global(.tl-container[dir='rtl']) .sidebarCreateFileButton {
	right: auto;
	left: -8px;
}

.sidebarCreateFileButton::after {
	display: block;
	content: '';
	position: absolute;
	top: 4px;
	left: 4px;
	right: 4px;
	bottom: 4px;
	border-radius: 4px;
	pointer-events: none;
	z-index: 0;
	visibility: hidden;
	background-color: var(--tla-color-hover-1);
}

.sidebarCreateFileButton:focus-visible {
	border-radius: 8px;
	outline-offset: -4px;
}

@media (hover: hover) {
	.sidebar:hover .sidebarCreateFileButton:hover::after {
		visibility: visible;
	}
}
/* ... */

